WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152800
Modern IDB: storage/indexeddb/odd-strings.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=152800
Summary
Modern IDB: storage/indexeddb/odd-strings.html is flaky
Brady Eidson
Reported
2016-01-06 12:49:31 PST
Modern IDB: storage/indexeddb/odd-strings.html is flaky You can reliably cause it to fail just by running it twice in a row: run-webkit-tests -1 storage/indexeddb/odd-strings.html storage/indexeddb/odd-strings.html An unexpected "blocked" event sends out on a delete request.
Attachments
Patch v1
(4.71 KB, patch)
2016-01-06 14:31 PST
,
Brady Eidson
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-01-06 14:31:52 PST
Created
attachment 268410
[details]
Patch v1
Brady Eidson
Comment 2
2016-01-06 14:35:31 PST
https://trac.webkit.org/changeset/194670
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug