Modern IDB: storage/indexeddb/odd-strings.html is flaky. https://bugs.webkit.org/show_bug.cgi?id=152800

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (Existing flaky test is now rock solid and unskipped).

* Modules/indexeddb/client/IDBDatabaseImpl.cpp:
(WebCore::IDBClient::IDBDatabase::IDBDatabase):
(WebCore::IDBClient::IDBDatabase::maybeCloseInServer): Only refuse to close in the server if there
  are active transactions. In the case of page navigation where stop() has been called on active DOM objects,
  there will never be any active transactions.

* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::commitTransaction):

LayoutTests:

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/170899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194671 268f45cc-cd09-0410-ab3c-d52691b4dbfc